# services/order-service/src/main/java/com/hmall/order/api/OrderController.java
@@ -3,17 +3,14 @@ package com.hmall.order.api;
 import com.hmall.order.api.dto.OrderCreateDto;
 import com.hmall.order.api.dto.OrderDto;
 import com.hmall.order.api.dto.OrderListPageDto;
+import com.hmall.order.api.dto.PurchasableServiceDto;
 import com.hmall.order.application.OrderApplicationService;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/orders")
@@ -52,5 +49,10 @@ public class OrderController {
         return ResponseEntity.ok().build();
     }
 
+    @GetMapping("/{orderId}/purchasable-services")
+    public ResponseEntity<List<PurchasableServiceDto>> getPurchasableServices(@PathVariable Long orderId) {
+        List<PurchasableServiceDto> services = applicationService.getPurchasableServices(orderId);
+        return ResponseEntity.ok(services);
+    }
 }
 
